--- a/package.yaml
+++ b/package.yaml
@@ -21,12 +21,14 @@ description:         Please see the README on Github at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- async
 - binary
 - bytestring
 - containers
 - heaps
 - mtl
 - network
+- network-simple
 - stm
 - time
 
