Starts refactor toward conduit for server

--- a/package.yaml
+++ b/package.yaml
@@ -24,11 +24,14 @@ dependencies:
 - async
 - binary
 - bytestring
+- conduit
+- conduit-extra
 - containers
 - heaps
 - mtl
 - network
 - network-simple
+- rolling-queue
 - stm
 - time
 
