Shortens ServerT instances by putting some in deriving

--- a/package.yaml
+++ b/package.yaml
@@ -54,6 +54,7 @@ default-extensions:
 - DeriveGeneric
 - DeriveLift
 - DeriveTraversable
+- DerivingStrategies
 - DuplicateRecordFields
 - EmptyCase
 - ExistentialQuantification
