Refactors to use OverloadedLabels and generic-lens orphan instances

--- a/package.yaml
+++ b/package.yaml
@@ -73,6 +73,7 @@ default-extensions:
 - LambdaCase
 - MultiParamTypeClasses
 - NumericUnderscores
+- OverloadedLabels
 - OverloadedStrings
 - PatternSynonyms
 - QuantifiedConstraints
