--- a/haskv.cabal
+++ b/haskv.cabal
@@ -31,32 +31,32 @@ library
   default-extensions: BangPatterns BlockArguments ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms QuantifiedConstraints RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
   ghc-options: -W -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fshow-hole-constraints -haddock
   build-depends:
-      base                          >= 4.7 && <5
-    , aeson                         >= 1.5.6 && < 1.6
-    , bytestring                    >= 0.10.12 && < 0.11
-    , containers                    >= 0.6.2 && < 0.7
-    , binary                        >= 0.8.8 && < 0.9
-    , transformers                  >= 0.5.6 && < 0.6
-    , time                          >= 1.9.3 && < 1.10
-    , random                        >= 1.2.0 && < 1.3
-    , mtl                           >= 2.2.2 && < 2.3
-    , async                         >= 2.2.3 && < 2.3
-    , stm                           >= 2.5.0 && < 2.6
-    , binary-instances              >= 1.0.1 && < 1.1
-    , binary-orphans                >= 1.0.1 && < 1.1
-    , conduit                       >= 1.3.4 && < 1.4
-    , directory                     >= 1.3.6 && < 1.4
-    , filepath                      >= 1.4.2 && < 1.5
-    , conduit-extra                 >= 1.3.5 && < 1.4
-    , network                       >= 3.1.0 && < 3.2
-    , streaming-commons             >= 0.2.2 && < 0.3
-    , heaps                         >= 0.4 && < 0.5
-    , hslogger                      >= 1.3.1 && < 1.4
-    , network-simple                >= 0.4.5 && < 0.5
-    , optics                        >= 0.4 && < 0.5
-    , servant                       >= 0.18.2 && < 0.19
-    , servant-server                >= 0.18.2 && < 0.19
-    , warp                          >= 3.3.14 && < 3.4
+      base >=4.16.0.0 && <5
+    , aeson
+    , bytestring
+    , containers
+    , binary
+    , transformers
+    , time
+    , random
+    , mtl
+    , async
+    , stm
+    , binary-instances
+    , binary-orphans
+    , conduit
+    , directory
+    , filepath
+    , conduit-extra
+    , network
+    , streaming-commons
+    , heaps
+    , hslogger
+    , network-simple
+    , optics
+    , servant
+    , servant-server
+    , warp
   exposed-modules:
       HaskKV
       HaskKV.API
@@ -104,33 +104,33 @@ executable haskv-exe
   default-extensions: BangPatterns BlockArguments ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms QuantifiedConstraints RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
   ghc-options: -W -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fshow-hole-constraints -haddock -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base                          >= 4.7 && <5
+      base >=4.16.0.0 && <5
     , haskv
-    , aeson                         >= 1.5.6 && < 1.6
-    , bytestring                    >= 0.10.12 && < 0.11
-    , containers                    >= 0.6.2 && < 0.7
-    , binary                        >= 0.8.8 && < 0.9
-    , transformers                  >= 0.5.6 && < 0.6
-    , time                          >= 1.9.3 && < 1.10
-    , random                        >= 1.2.0 && < 1.3
-    , mtl                           >= 2.2.2 && < 2.3
-    , async                         >= 2.2.3 && < 2.3
-    , stm                           >= 2.5.0 && < 2.6
-    , binary-instances              >= 1.0.1 && < 1.1
-    , binary-orphans                >= 1.0.1 && < 1.1
-    , conduit                       >= 1.3.4 && < 1.4
-    , directory                     >= 1.3.6 && < 1.4
-    , filepath                      >= 1.4.2 && < 1.5
-    , conduit-extra                 >= 1.3.5 && < 1.4
-    , network                       >= 3.1.0 && < 3.2
-    , streaming-commons             >= 0.2.2 && < 0.3
-    , heaps                         >= 0.4 && < 0.5
-    , hslogger                      >= 1.3.1 && < 1.4
-    , network-simple                >= 0.4.5 && < 0.5
-    , optics                        >= 0.4 && < 0.5
-    , servant                       >= 0.18.2 && < 0.19
-    , servant-server                >= 0.18.2 && < 0.19
-    , warp                          >= 3.3.14 && < 3.4
+    , aeson
+    , bytestring
+    , containers
+    , binary
+    , transformers
+    , time
+    , random
+    , mtl
+    , async
+    , stm
+    , binary-instances
+    , binary-orphans
+    , conduit
+    , directory
+    , filepath
+    , conduit-extra
+    , network
+    , streaming-commons
+    , heaps
+    , hslogger
+    , network-simple
+    , optics
+    , servant
+    , servant-server
+    , warp
   other-modules:
       Paths_haskv
   default-language: Haskell2010
@@ -143,35 +143,35 @@ test-suite haskv-test
   default-extensions: BangPatterns BlockArguments ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms QuantifiedConstraints RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
   ghc-options: -W -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fshow-hole-constraints -haddock -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base                          >= 4.7 && <5
+      base >=4.16.0.0 && <5
     , haskv
-    , aeson                         >= 1.5.6 && < 1.6
-    , bytestring                    >= 0.10.12 && < 0.11
-    , containers                    >= 0.6.2 && < 0.7
-    , binary                        >= 0.8.8 && < 0.9
-    , transformers                  >= 0.5.6 && < 0.6
-    , time                          >= 1.9.3 && < 1.10
-    , random                        >= 1.2.0 && < 1.3
-    , mtl                           >= 2.2.2 && < 2.3
-    , async                         >= 2.2.3 && < 2.3
-    , stm                           >= 2.5.0 && < 2.6
-    , binary-orphans                >= 1.0.1 && < 1.1
-    , conduit                       >= 1.3.4 && < 1.4
-    , directory                     >= 1.3.6 && < 1.4
-    , filepath                      >= 1.4.2 && < 1.5
-    , conduit-extra                 >= 1.3.5 && < 1.4
-    , network                       >= 3.1.0 && < 3.2
-    , streaming-commons             >= 0.2.2 && < 0.3
-    , heaps                         >= 0.4 && < 0.5
-    , hslogger                      >= 1.3.1 && < 1.4
-    , network-simple                >= 0.4.5 && < 0.5
-    , optics                        >= 0.4 && < 0.5
-    , servant                       >= 0.18.2 && < 0.19
-    , servant-server                >= 0.18.2 && < 0.19
-    , warp                          >= 3.3.14 && < 3.4
-    , tasty                         >= 1.4.1 && < 1.5
-    , tasty-hunit                   >= 0.10.0 && < 0.11
-    , tasty-quickcheck              >= 0.10.1 && < 0.11
+    , aeson
+    , bytestring
+    , containers
+    , binary
+    , transformers
+    , time
+    , random
+    , mtl
+    , async
+    , stm
+    , binary-orphans
+    , conduit
+    , directory
+    , filepath
+    , conduit-extra
+    , network
+    , streaming-commons
+    , heaps
+    , hslogger
+    , network-simple
+    , optics
+    , servant
+    , servant-server
+    , warp
+    , tasty
+    , tasty-hunit
+    , tasty-quickcheck
   other-modules:
       LogTest
       Mock
