Uses unliftio's exception handling so that async exceptions are not caught

--- a/haskv.cabal
+++ b/haskv.cabal
@@ -55,7 +55,7 @@ library
     , optics
     , servant
     , servant-server
-    , unliftio-core
+    , unliftio
     , warp
   exposed-modules:
       HaskKV
