Removes DerivingVia boilerplate
Removes the boilerplate with DerivingVia and Has typeclasses,
because it isn't necessary and makes it harder to specialize
typeclass functions. Also adds GHC options to automatically
save the GHC core to the dist-newstyle/ directory.

--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,11 @@
 packages: .
 
 optimization: 2
+
+package haskv
+  ghc-options: -finfo-table-map
+               -fdistinct-constructor-tables
+               -eventlog
+               -dsuppress-all
+               -ddump-to-file
+               -ddump-simpl
